change input to different name

--- a/pas/tasks/inject-pasw-tile/task.yml
+++ b/pas/tasks/inject-pasw-tile/task.yml
@@ -9,7 +9,7 @@ image_resource:
 
 inputs:
   - name: peters-pipelines
-  - name: pivnet-product
+  - name: raw-pasw-tile
 
 outputs:
   - name: pivnet-product
