--- a/pcf/homelab-install-pipeline.yml
+++ b/pcf/homelab-install-pipeline.yml
@@ -569,6 +569,23 @@ jobs:
       OPS_MGR_PWD: {{opsman_admin_password}}
       PRODUCT_NAME: "p-rabbitmq"
       PRODUCT_CONFIG_YAML: "peters-pipelines/pcf/sample-tile-configs/rabbitmq.yml"
+- name: Configure-Healthwatch-Tile
+  plan:
+  - aggregate:
+    - get: peters-pipelines
+    - get: pcf-ops-manager
+      params: {globs: []}
+      passed: [stage-Healthwatch]
+      trigger: true
+
+  - task: configure
+    file: peters-pipelines/pcf/tasks/config-product/task.yml
+    params:
+      OPSMAN_DOMAIN_OR_IP_ADDRESS: {{opsman_domain_or_ip_address}}
+      OPS_MGR_USR: {{opsman_admin_username}}
+      OPS_MGR_PWD: {{opsman_admin_password}}
+      PRODUCT_NAME: "p-healthwatch"
+      PRODUCT_CONFIG_YAML: "peters-pipelines/pcf/sample-tile-configs/healthwatch.yml"
 
 - name: apply-changes-all-tiles
   plan:
