--- a/pks/automated-create-cluster-pipeline.yml
+++ b/pks/automated-create-cluster-pipeline.yml
@@ -26,3 +26,5 @@ jobs:
     file: peters-pipelines/pks/tasks/determine-clusters-needs/task.yml
     params:
       PKS_CLUSTER_JSON_FILE: {{pks_cluster_json_file}}
+  - put: pks-clusters
+    params: {repository: pks-clusters}
