n need to remove file

--- a/pks/automated-create-cluster-pipeline.yml
+++ b/pks/automated-create-cluster-pipeline.yml
@@ -20,7 +20,8 @@ jobs:
 - name: determine-clusters-needs
   plan:
   - get: peters-pipelines
-  - get: pks-clusters-in
+  - get: pks-clusters
+    resource: pks-clusters-in
     trigger: true
   - task: authenticate-pks
     file: peters-pipelines/pks/tasks/authenticate-pks/task.yml
@@ -33,11 +34,14 @@ jobs:
     params:
       PKS_CLUSTER_JSON_FILE: desired.json
   - put: pks-clusters-out
-    params: {repository: pks-clusters-updated}
+    params: 
+      repository: pks-clusters-updated
+      rebase: true
 - name: resolve-clusters-needs
   plan:
   - get: peters-pipelines
-  - get: pks-clusters-in
+  - get: pks-clusters
+    resource: pks-clusters-in
     trigger: true
     passed: [determine-clusters-needs]
   - task: authenticate-pks
@@ -49,4 +53,5 @@ jobs:
   - task: resolve-clusters-needs
     file: peters-pipelines/pks/tasks/resolve-clusters-needs/task.yml
   - put: pks-clusters-out
-    params: {repository: pks-clusters-updated}
+    params: 
+      repository: pks-clusters-updated
