update to walmart harbor repo

--- a/pks/tasks/create-cluster/task.yml
+++ b/pks/tasks/create-cluster/task.yml
@@ -5,7 +5,7 @@ platform: linux
 image_resource:
   type: docker-image
   source:
-    repository: oskoss/pks
+    repository: harbor.homeoffice.wal-mart.com/library/oskoss/pks
 
 params:
   PKS_CLUSTER_PREFIX:
