--- a/pks/tasks/determine-clusters-needs/task.yml
+++ b/pks/tasks/determine-clusters-needs/task.yml
@@ -5,7 +5,8 @@ platform: linux
 image_resource:
   type: docker-image
   source:
-    repository: harbor.homeoffice.wal-mart.com/library/oskoss/pks
+    repository: harbor.homeoffice.wal-mart.com/library/oskoss/pks     
+    insecure_registries: ["harbor.homeoffice.wal-mart.com:443"]
 
 inputs:
   - name: pks-scripts
