--- a/kubernetes/tasks/authenticate-kubernetes/task.yml
+++ b/kubernetes/tasks/authenticate-kubernetes/task.yml
@@ -6,7 +6,7 @@ image_resource:
   type: docker-image
   source:
     repository: harbor.homeoffice.wal-mart.com/library/oskoss/pks     
-    insecure_registries: ["harbor.homeoffice.wal-mart.com:8080"]
+    insecure_registries: ["harbor.homeoffice.wal-mart.com"]
 
 params:
   PKS_API_URL:
