add pks api pass

--- a/kubernetes/tasks/authenticate-kubernetes/task.yml
+++ b/kubernetes/tasks/authenticate-kubernetes/task.yml
@@ -5,7 +5,8 @@ platform: linux
 image_resource:
   type: docker-image
   source:
-    repository: oskoss/pks
+    repository: harbor.pks.pcf.cloud.oskoss.com/library/oskoss/pks
+    insecure_registries: ["harbor.pks.pcf.cloud.oskoss.com"]
 
 params:
   PKS_API_URL:
