--- a/kubernetes/tasks/authenticate-kubernetes/task.yml
+++ b/kubernetes/tasks/authenticate-kubernetes/task.yml
@@ -5,8 +5,8 @@ platform: linux
 image_resource:
   type: docker-image
   source:
-    repository: harbor.pks.pcf.cloud.oskoss.com/library/oskoss/pks
-    insecure_registries: ["harbor.pks.pcf.cloud.oskoss.com"]
+    repository: harbor.home.pcfdot.com/library/oskoss/pks
+    insecure_registries: ["harbor.home.pcfdot.com"]
 
 params:
   PKS_API_URL:
